
config("freetype-config") {
  include_dirs = ["src/include"]
}

static_library("freetype") {
  sources = [
    "src/src/autofit/autofit.c"
    "src/src/bdf/bdf.c"
    "src/src/cff/cff.c"
    "src/src/base/ftbase.c"
    "src/src/base/ftbitmap.c"
    "src/src/cache/ftcache.c"
    "src/builds/windows/ftdebug.c"
    "src/src/base/ftfstype.c"
    "src/src/base/ftgasp.c"
    "src/src/base/ftglyph.c"
    "src/src/gzip/ftgzip.c"
    "src/src/base/ftinit.c"
    "src/src/lzw/ftlzw.c"
    "src/src/base/ftstroke.c"
    "src/src/base/ftsystem.c"
    "src/src/smooth/smooth.c"
    "src/src/base/ftbbox.c"
    "src/src/base/ftmm.c"
    "src/src/base/ftpfr.c"
    "src/src/base/ftsynth.c"
    "src/src/base/fttype1.c"
    "src/src/base/ftwinfnt.c"
    "src/src/base/ftxf86.c"
    "src/src/base/ftlcdfil.c"
    "src/src/base/ftgxval.c"
    "src/src/base/ftotval.c"
    "src/src/base/ftpatent.c"
    "src/src/pcf/pcf.c"
    "src/src/pfr/pfr.c"
    "src/src/psaux/psaux.c"
    "src/src/pshinter/pshinter.c"
    "src/src/psnames/psmodule.c"
    "src/src/raster/raster.c"
    "src/src/sfnt/sfnt.c"
    "src/src/truetype/truetype.c"
    "src/src/type1/type1.c"
    "src/src/cid/type1cid.c"
    "src/src/type42/type42.c"
    "src/src/winfonts/winfnt.c"
    "src/include/ft2build.h"
    "src/include/config/ftconfig.h"
    "src/include/config/ftheader.h"
    "src/include/config/ftmodule.h"
    "src/include/config/ftoption.h"
    "src/include/config/ftstdlib.h"
    "src/include/config/ftconfig.h"
  ]

  include_dirs = [
    "src/src/truetype"
    "src/src/sfnt"
    "src/src/autofit"
    "src/src/smooth"
    "src/src/raster"
    "src/src/psaux"
    "src/src/psnames"
  ]

  direct_dependent_configs = [":freetype-config" ]

  defines = ["FT2_BUILD_LIBRARY"]
  if (is_debug) {
    defines += [
      "FT_DEBUG_LEVEL_ERROR"
      "FT_DEBUG_LEVEL_TRACE"
      "_MBCS" 
    ]
  }
  
  configs -= ["//build/config/compiler/win:unicode" ]
}