config("libjpeg_config") {
  include_dirs = ["."]
}

static_library("libjpeg") {
  sources = [
    # we currently build skia's version of libjpeg-turbo without
    # SIMD optimizations for simplicity
    "jsimd_none.c"

    "jcapimin.c"
    "jcapistd.c"
    "jccoefct.c"
    "jccolor.c"
    "jcdctmgr.c"
    "jchuff.c"
    "jchuff.h"
    "jcinit.c"
    "jcmainct.c"
    "jcmarker.c"
    "jcmaster.c"
    "jcomapi.c"
    "jconfig.h"
    "jcparam.c"
    "jcphuff.c"
    "jcprepct.c"
    "jcsample.c"
    "jdapimin.c"
    "jdapistd.c"
    "jdatadst.c"
    "jdatasrc.c"
    "jdcoefct.c"
    "jdcolor.c"
    "jdct.h"
    "jddctmgr.c"
    "jdhuff.c"
    "jdhuff.h"
    "jdinput.c"
    "jdmainct.c"
    "jdmarker.c"
    "jdmaster.c"
    "jdmerge.c"
    "jdphuff.c"
    "jdpostct.c"
    "jdsample.c"
    "jerror.c"
    "jerror.h"
    "jfdctflt.c"
    "jfdctfst.c"
    "jfdctint.c"
    "jidctflt.c"
    "jidctfst.c"
    "jidctint.c"
    "jidctred.c"
    "jinclude.h"
    "jmemmgr.c"
    "jmemnobs.c"
    "jmemsys.h"
    "jmorecfg.h"
    "jpegint.h"
    "jpeglib.h"
    "jpeglibmangler.h"
    "jquant1.c"
    "jquant2.c"
    "jutils.c"
    "jversion.h"
  ]
  direct_dependent_configs = [":libjpeg_config"]
}