import("common.gni")

v8_base_sources = [
  "src/src/accessors.cc",
  "src/src/accessors.h",
  "src/src/allocation.cc",
  "src/src/allocation.h",
  "src/src/allocation-site-scopes.cc",
  "src/src/allocation-site-scopes.h",
  "src/src/allocation-tracker.cc",
  "src/src/allocation-tracker.h",
  "src/src/api.cc",
  "src/src/api.h",
  "src/src/arguments.cc",
  "src/src/arguments.h",
  "src/src/assembler.cc",
  "src/src/assembler.h",
  "src/src/assert-scope.h",
  "src/src/ast.cc",
  "src/src/ast.h",
  "src/src/atomicops.h",
  "src/src/atomicops_internals_x86_gcc.cc",
  "src/src/bignum-dtoa.cc",
  "src/src/bignum-dtoa.h",
  "src/src/bignum.cc",
  "src/src/bignum.h",
  "src/src/bootstrapper.cc",
  "src/src/bootstrapper.h",
  "src/src/builtins.cc",
  "src/src/builtins.h",
  "src/src/bytecodes-irregexp.h",
  "src/src/cached-powers.cc",
  "src/src/cached-powers.h",
  "src/src/char-predicates-inl.h",
  "src/src/char-predicates.h",
  "src/src/checks.cc",
  "src/src/checks.h",
  "src/src/circular-queue-inl.h",
  "src/src/circular-queue.h",
  "src/src/code-stubs.cc",
  "src/src/code-stubs.h",
  "src/src/code-stubs-hydrogen.cc",
  "src/src/code.h",
  "src/src/codegen.cc",
  "src/src/codegen.h",
  "src/src/compilation-cache.cc",
  "src/src/compilation-cache.h",
  "src/src/compiler.cc",
  "src/src/compiler.h",
  "src/src/contexts.cc",
  "src/src/contexts.h",
  "src/src/conversions-inl.h",
  "src/src/conversions.cc",
  "src/src/conversions.h",
  "src/src/counters.cc",
  "src/src/counters.h",
  "src/src/cpu-profiler-inl.h",
  "src/src/cpu-profiler.cc",
  "src/src/cpu-profiler.h",
  "src/src/cpu.cc",
  "src/src/cpu.h",
  "src/src/data-flow.cc",
  "src/src/data-flow.h",
  "src/src/date.cc",
  "src/src/date.h",
  "src/src/dateparser-inl.h",
  "src/src/dateparser.cc",
  "src/src/dateparser.h",
  "src/src/debug-agent.cc",
  "src/src/debug-agent.h",
  "src/src/debug.cc",
  "src/src/debug.h",
  "src/src/deoptimizer.cc",
  "src/src/deoptimizer.h",
  "src/src/disasm.h",
  "src/src/disassembler.cc",
  "src/src/disassembler.h",
  "src/src/diy-fp.cc",
  "src/src/diy-fp.h",
  "src/src/double.h",
  "src/src/dtoa.cc",
  "src/src/dtoa.h",
  "src/src/effects.h",
  "src/src/elements-kind.cc",
  "src/src/elements-kind.h",
  "src/src/elements.cc",
  "src/src/elements.h",
  "src/src/execution.cc",
  "src/src/execution.h",
  "src/src/extensions/externalize-string-extension.cc",
  "src/src/extensions/externalize-string-extension.h",
  "src/src/extensions/free-buffer-extension.cc",
  "src/src/extensions/free-buffer-extension.h",
  "src/src/extensions/gc-extension.cc",
  "src/src/extensions/gc-extension.h",
  "src/src/extensions/statistics-extension.cc",
  "src/src/extensions/statistics-extension.h",
  "src/src/extensions/trigger-failure-extension.cc",
  "src/src/extensions/trigger-failure-extension.h",
  "src/src/factory.cc",
  "src/src/factory.h",
  "src/src/fast-dtoa.cc",
  "src/src/fast-dtoa.h",
  "src/src/feedback-slots.h",
  "src/src/fixed-dtoa.cc",
  "src/src/fixed-dtoa.h",
  "src/src/flag-definitions.h",
  "src/src/flags.cc",
  "src/src/flags.h",
  "src/src/frames-inl.h",
  "src/src/frames.cc",
  "src/src/frames.h",
  "src/src/full-codegen.cc",
  "src/src/full-codegen.h",
  "src/src/func-name-inferrer.cc",
  "src/src/func-name-inferrer.h",
  "src/src/gdb-jit.cc",
  "src/src/gdb-jit.h",
  "src/src/global-handles.cc",
  "src/src/global-handles.h",
  "src/src/globals.h",
  "src/src/handles-inl.h",
  "src/src/handles.cc",
  "src/src/handles.h",
  "src/src/hashmap.h",
  "src/src/heap-inl.h",
  "src/src/heap-profiler.cc",
  "src/src/heap-profiler.h",
  "src/src/heap-snapshot-generator-inl.h",
  "src/src/heap-snapshot-generator.cc",
  "src/src/heap-snapshot-generator.h",
  "src/src/heap.cc",
  "src/src/heap.h",
  "src/src/hydrogen-alias-analysis.h",
  "src/src/hydrogen-bce.cc",
  "src/src/hydrogen-bce.h",
  "src/src/hydrogen-bch.cc",
  "src/src/hydrogen-bch.h",
  "src/src/hydrogen-canonicalize.cc",
  "src/src/hydrogen-canonicalize.h",
  "src/src/hydrogen-check-elimination.cc",
  "src/src/hydrogen-check-elimination.h",
  "src/src/hydrogen-dce.cc",
  "src/src/hydrogen-dce.h",
  "src/src/hydrogen-dehoist.cc",
  "src/src/hydrogen-dehoist.h",
  "src/src/hydrogen-environment-liveness.cc",
  "src/src/hydrogen-environment-liveness.h",
  "src/src/hydrogen-escape-analysis.cc",
  "src/src/hydrogen-escape-analysis.h",
  "src/src/hydrogen-flow-engine.h",
  "src/src/hydrogen-instructions.cc",
  "src/src/hydrogen-instructions.h",
  "src/src/hydrogen.cc",
  "src/src/hydrogen.h",
  "src/src/hydrogen-gvn.cc",
  "src/src/hydrogen-gvn.h",
  "src/src/hydrogen-infer-representation.cc",
  "src/src/hydrogen-infer-representation.h",
  "src/src/hydrogen-infer-types.cc",
  "src/src/hydrogen-infer-types.h",
  "src/src/hydrogen-load-elimination.cc",
  "src/src/hydrogen-load-elimination.h",
  "src/src/hydrogen-mark-deoptimize.cc",
  "src/src/hydrogen-mark-deoptimize.h",
  "src/src/hydrogen-mark-unreachable.cc",
  "src/src/hydrogen-mark-unreachable.h",
  "src/src/hydrogen-minus-zero.cc",
  "src/src/hydrogen-minus-zero.h",
  "src/src/hydrogen-osr.cc",
  "src/src/hydrogen-osr.h",
  "src/src/hydrogen-range-analysis.cc",
  "src/src/hydrogen-range-analysis.h",
  "src/src/hydrogen-redundant-phi.cc",
  "src/src/hydrogen-redundant-phi.h",
  "src/src/hydrogen-removable-simulates.cc",
  "src/src/hydrogen-removable-simulates.h",
  "src/src/hydrogen-representation-changes.cc",
  "src/src/hydrogen-representation-changes.h",
  "src/src/hydrogen-sce.cc",
  "src/src/hydrogen-sce.h",
  "src/src/hydrogen-uint32-analysis.cc",
  "src/src/hydrogen-uint32-analysis.h",
  "src/src/icu_util.cc",
  "src/src/icu_util.h",
  "src/src/ic-inl.h",
  "src/src/ic.cc",
  "src/src/ic.h",
  "src/src/incremental-marking.cc",
  "src/src/incremental-marking.h",
  "src/src/interface.cc",
  "src/src/interface.h",
  "src/src/interpreter-irregexp.cc",
  "src/src/interpreter-irregexp.h",
  "src/src/isolate.cc",
  "src/src/isolate.h",
  "src/src/json-parser.h",
  "src/src/json-stringifier.h",
  "src/src/jsregexp-inl.h",
  "src/src/jsregexp.cc",
  "src/src/jsregexp.h",
  "src/src/lazy-instance.h",
  # TODO(jochen): move libplatform/ files to their own target.
  "src/src/libplatform/default-platform.cc",
  "src/src/libplatform/default-platform.h",
  "src/src/libplatform/task-queue.cc",
  "src/src/libplatform/task-queue.h",
  "src/src/libplatform/worker-thread.cc",
  "src/src/libplatform/worker-thread.h",
  "src/src/list-inl.h",
  "src/src/list.h",
  "src/src/lithium-allocator-inl.h",
  "src/src/lithium-allocator.cc",
  "src/src/lithium-allocator.h",
  "src/src/lithium-codegen.cc",
  "src/src/lithium-codegen.h",
  "src/src/lithium.cc",
  "src/src/lithium.h",
  "src/src/liveedit.cc",
  "src/src/liveedit.h",
  "src/src/log-inl.h",
  "src/src/log-utils.cc",
  "src/src/log-utils.h",
  "src/src/log.cc",
  "src/src/log.h",
  "src/src/macro-assembler.h",
  "src/src/mark-compact.cc",
  "src/src/mark-compact.h",
  "src/src/messages.cc",
  "src/src/messages.h",
  "src/src/natives.h",
  "src/src/objects-debug.cc",
  "src/src/objects-inl.h",
  "src/src/objects-printer.cc",
  "src/src/objects-visiting.cc",
  "src/src/objects-visiting.h",
  "src/src/objects.cc",
  "src/src/objects.h",
  "src/src/once.cc",
  "src/src/once.h",
  "src/src/optimizing-compiler-thread.h",
  "src/src/optimizing-compiler-thread.cc",
  "src/src/parser.cc",
  "src/src/parser.h",
  "src/src/platform/elapsed-timer.h",
  "src/src/platform/time.cc",
  "src/src/platform/time.h",
  "src/src/platform.h",
  "src/src/platform/condition-variable.cc",
  "src/src/platform/condition-variable.h",
  "src/src/platform/mutex.cc",
  "src/src/platform/mutex.h",
  "src/src/platform/semaphore.cc",
  "src/src/platform/semaphore.h",
  "src/src/platform/socket.cc",
  "src/src/platform/socket.h",
  "src/src/preparse-data-format.h",
  "src/src/preparse-data.cc",
  "src/src/preparse-data.h",
  "src/src/preparser.cc",
  "src/src/preparser.h",
  "src/src/prettyprinter.cc",
  "src/src/prettyprinter.h",
  "src/src/profile-generator-inl.h",
  "src/src/profile-generator.cc",
  "src/src/profile-generator.h",
  "src/src/property-details.h",
  "src/src/property.cc",
  "src/src/property.h",
  "src/src/regexp-macro-assembler-irregexp-inl.h",
  "src/src/regexp-macro-assembler-irregexp.cc",
  "src/src/regexp-macro-assembler-irregexp.h",
  "src/src/regexp-macro-assembler-tracer.cc",
  "src/src/regexp-macro-assembler-tracer.h",
  "src/src/regexp-macro-assembler.cc",
  "src/src/regexp-macro-assembler.h",
  "src/src/regexp-stack.cc",
  "src/src/regexp-stack.h",
  "src/src/rewriter.cc",
  "src/src/rewriter.h",
  "src/src/runtime-profiler.cc",
  "src/src/runtime-profiler.h",
  "src/src/runtime.cc",
  "src/src/runtime.h",
  "src/src/safepoint-table.cc",
  "src/src/safepoint-table.h",
  "src/src/sampler.cc",
  "src/src/sampler.h",
  "src/src/scanner-character-streams.cc",
  "src/src/scanner-character-streams.h",
  "src/src/scanner.cc",
  "src/src/scanner.h",
  "src/src/scopeinfo.cc",
  "src/src/scopeinfo.h",
  "src/src/scopes.cc",
  "src/src/scopes.h",
  "src/src/serialize.cc",
  "src/src/serialize.h",
  "src/src/small-pointer-list.h",
  "src/src/smart-pointers.h",
  "src/src/snapshot-common.cc",
  "src/src/snapshot.h",
  "src/src/spaces-inl.h",
  "src/src/spaces.cc",
  "src/src/spaces.h",
  "src/src/store-buffer-inl.h",
  "src/src/store-buffer.cc",
  "src/src/store-buffer.h",
  "src/src/string-search.cc",
  "src/src/string-search.h",
  "src/src/string-stream.cc",
  "src/src/string-stream.h",
  "src/src/strtod.cc",
  "src/src/strtod.h",
  "src/src/stub-cache.cc",
  "src/src/stub-cache.h",
  "src/src/sweeper-thread.h",
  "src/src/sweeper-thread.cc",
  "src/src/token.cc",
  "src/src/token.h",
  "src/src/transitions-inl.h",
  "src/src/transitions.cc",
  "src/src/transitions.h",
  "src/src/type-info.cc",
  "src/src/type-info.h",
  "src/src/types.cc",
  "src/src/types.h",
  "src/src/typing.cc",
  "src/src/typing.h",
  "src/src/unbound-queue-inl.h",
  "src/src/unbound-queue.h",
  "src/src/unicode-inl.h",
  "src/src/unicode.cc",
  "src/src/unicode.h",
  "src/src/unique.h",
  "src/src/uri.h",
  "src/src/utils-inl.h",
  "src/src/utils.cc",
  "src/src/utils.h",
  "src/src/utils/random-number-generator.cc",
  "src/src/utils/random-number-generator.h",
  "src/src/v8-counters.cc",
  "src/src/v8-counters.h",
  "src/src/v8.cc",
  "src/src/v8.h",
  "src/src/v8checks.h",
  "src/src/v8conversions.cc",
  "src/src/v8conversions.h",
  "src/src/v8globals.h",
  "src/src/v8memory.h",
  "src/src/v8threads.cc",
  "src/src/v8threads.h",
  "src/src/v8utils.cc",
  "src/src/v8utils.h",
  "src/src/variables.cc",
  "src/src/variables.h",
  "src/src/version.cc",
  "src/src/version.h",
  "src/src/vm-state-inl.h",
  "src/src/vm-state.h",
  "src/src/zone-inl.h",
  "src/src/zone.cc",
  "src/src/zone.h",
  "src/src/arm/assembler-arm-inl.h",
  "src/src/arm/assembler-arm.cc",
  "src/src/arm/assembler-arm.h",
  "src/src/arm/builtins-arm.cc",
  "src/src/arm/code-stubs-arm.cc",
  "src/src/arm/code-stubs-arm.h",
  "src/src/arm/codegen-arm.cc",
  "src/src/arm/codegen-arm.h",
  "src/src/arm/constants-arm.h",
  "src/src/arm/constants-arm.cc",
  "src/src/arm/cpu-arm.cc",
  "src/src/arm/debug-arm.cc",
  "src/src/arm/deoptimizer-arm.cc",
  "src/src/arm/disasm-arm.cc",
  "src/src/arm/frames-arm.cc",
  "src/src/arm/frames-arm.h",
  "src/src/arm/full-codegen-arm.cc",
  "src/src/arm/ic-arm.cc",
  "src/src/arm/lithium-arm.cc",
  "src/src/arm/lithium-arm.h",
  "src/src/arm/lithium-codegen-arm.cc",
  "src/src/arm/lithium-codegen-arm.h",
  "src/src/arm/lithium-gap-resolver-arm.cc",
  "src/src/arm/lithium-gap-resolver-arm.h",
  "src/src/arm/macro-assembler-arm.cc",
  "src/src/arm/macro-assembler-arm.h",
  "src/src/arm/regexp-macro-assembler-arm.cc",
  "src/src/arm/regexp-macro-assembler-arm.h",
  "src/src/arm/simulator-arm.cc",
  "src/src/arm/stub-cache-arm.cc",
  "src/src/a64/assembler-a64.cc",
  "src/src/a64/assembler-a64.h",
  "src/src/a64/assembler-a64-inl.h",
  "src/src/a64/builtins-a64.cc",
  "src/src/a64/codegen-a64.cc",
  "src/src/a64/codegen-a64.h",
  "src/src/a64/code-stubs-a64.cc",
  "src/src/a64/code-stubs-a64.h",
  "src/src/a64/constants-a64.h",
  "src/src/a64/cpu-a64.cc",
  "src/src/a64/cpu-a64.h",
  "src/src/a64/debug-a64.cc",
  "src/src/a64/debugger-a64.cc",
  "src/src/a64/debugger-a64.h",
  "src/src/a64/decoder-a64.cc",
  "src/src/a64/decoder-a64.h",
  "src/src/a64/deoptimizer-a64.cc",
  "src/src/a64/disasm-a64.cc",
  "src/src/a64/disasm-a64.h",
  "src/src/a64/frames-a64.cc",
  "src/src/a64/frames-a64.h",
  "src/src/a64/full-codegen-a64.cc",
  "src/src/a64/ic-a64.cc",
  "src/src/a64/instructions-a64.cc",
  "src/src/a64/instructions-a64.h",
  "src/src/a64/instrument-a64.cc",
  "src/src/a64/instrument-a64.h",
  "src/src/a64/lithium-a64.cc",
  "src/src/a64/lithium-a64.h",
  "src/src/a64/lithium-codegen-a64.cc",
  "src/src/a64/lithium-codegen-a64.h",
  "src/src/a64/lithium-gap-resolver-a64.cc",
  "src/src/a64/lithium-gap-resolver-a64.h",
  "src/src/a64/macro-assembler-a64.cc",
  "src/src/a64/macro-assembler-a64.h",
  "src/src/a64/macro-assembler-a64-inl.h",
  "src/src/a64/regexp-macro-assembler-a64.cc",
  "src/src/a64/regexp-macro-assembler-a64.h",
  "src/src/a64/simulator-a64.cc",
  "src/src/a64/simulator-a64.h",
  "src/src/a64/stub-cache-a64.cc",
  "src/src/a64/utils-a64.cc",
  "src/src/a64/utils-a64.h",
  "src/src/ia32/assembler-ia32-inl.h",
  "src/src/ia32/assembler-ia32.cc",
  "src/src/ia32/assembler-ia32.h",
  "src/src/ia32/builtins-ia32.cc",
  "src/src/ia32/code-stubs-ia32.cc",
  "src/src/ia32/code-stubs-ia32.h",
  "src/src/ia32/codegen-ia32.cc",
  "src/src/ia32/codegen-ia32.h",
  "src/src/ia32/cpu-ia32.cc",
  "src/src/ia32/debug-ia32.cc",
  "src/src/ia32/deoptimizer-ia32.cc",
  "src/src/ia32/disasm-ia32.cc",
  "src/src/ia32/frames-ia32.cc",
  "src/src/ia32/frames-ia32.h",
  "src/src/ia32/full-codegen-ia32.cc",
  "src/src/ia32/ic-ia32.cc",
  "src/src/ia32/lithium-codegen-ia32.cc",
  "src/src/ia32/lithium-codegen-ia32.h",
  "src/src/ia32/lithium-gap-resolver-ia32.cc",
  "src/src/ia32/lithium-gap-resolver-ia32.h",
  "src/src/ia32/lithium-ia32.cc",
  "src/src/ia32/lithium-ia32.h",
  "src/src/ia32/macro-assembler-ia32.cc",
  "src/src/ia32/macro-assembler-ia32.h",
  "src/src/ia32/regexp-macro-assembler-ia32.cc",
  "src/src/ia32/regexp-macro-assembler-ia32.h",
  "src/src/ia32/stub-cache-ia32.cc",
  "src/src/mips/assembler-mips.cc",
  "src/src/mips/assembler-mips.h",
  "src/src/mips/assembler-mips-inl.h",
  "src/src/mips/builtins-mips.cc",
  "src/src/mips/codegen-mips.cc",
  "src/src/mips/codegen-mips.h",
  "src/src/mips/code-stubs-mips.cc",
  "src/src/mips/code-stubs-mips.h",
  "src/src/mips/constants-mips.cc",
  "src/src/mips/constants-mips.h",
  "src/src/mips/cpu-mips.cc",
  "src/src/mips/debug-mips.cc",
  "src/src/mips/deoptimizer-mips.cc",
  "src/src/mips/disasm-mips.cc",
  "src/src/mips/frames-mips.cc",
  "src/src/mips/frames-mips.h",
  "src/src/mips/full-codegen-mips.cc",
  "src/src/mips/ic-mips.cc",
  "src/src/mips/lithium-codegen-mips.cc",
  "src/src/mips/lithium-codegen-mips.h",
  "src/src/mips/lithium-gap-resolver-mips.cc",
  "src/src/mips/lithium-gap-resolver-mips.h",
  "src/src/mips/lithium-mips.cc",
  "src/src/mips/lithium-mips.h",
  "src/src/mips/macro-assembler-mips.cc",
  "src/src/mips/macro-assembler-mips.h",
  "src/src/mips/regexp-macro-assembler-mips.cc",
  "src/src/mips/regexp-macro-assembler-mips.h",
  "src/src/mips/simulator-mips.cc",
  "src/src/mips/stub-cache-mips.cc",
  "src/src/x64/assembler-x64-inl.h",
  "src/src/x64/assembler-x64.cc",
  "src/src/x64/assembler-x64.h",
  "src/src/x64/builtins-x64.cc",
  "src/src/x64/code-stubs-x64.cc",
  "src/src/x64/code-stubs-x64.h",
  "src/src/x64/codegen-x64.cc",
  "src/src/x64/codegen-x64.h",
  "src/src/x64/cpu-x64.cc",
  "src/src/x64/debug-x64.cc",
  "src/src/x64/deoptimizer-x64.cc",
  "src/src/x64/disasm-x64.cc",
  "src/src/x64/frames-x64.cc",
  "src/src/x64/frames-x64.h",
  "src/src/x64/full-codegen-x64.cc",
  "src/src/x64/ic-x64.cc",
  "src/src/x64/lithium-codegen-x64.cc",
  "src/src/x64/lithium-codegen-x64.h",
  "src/src/x64/lithium-gap-resolver-x64.cc",
  "src/src/x64/lithium-gap-resolver-x64.h",
  "src/src/x64/lithium-x64.cc",
  "src/src/x64/lithium-x64.h",
  "src/src/x64/macro-assembler-x64.cc",
  "src/src/x64/macro-assembler-x64.h",
  "src/src/x64/regexp-macro-assembler-x64.cc",
  "src/src/x64/regexp-macro-assembler-x64.h",
  "src/src/x64/stub-cache-x64.cc",
]

if (is_win) {
  v8_base_sources += [
    "src/src/platform-win32.cc"
    "src/src/win32-math.cc"
    "src/src/win32-math.h"
  ]
}

v8_arm_sources_filters = [ "*\barm/*" ]
v8_a64_sources_filters = [ "*\ba64/*" ]
v8_ia32_sources_filters = [ "*\bia32/*" ]
v8_mipsel_sources_filters = [ "*\bmips/*" ]
v8_x64_sources_filters = [ "*\bx64/*" ]
v8_sources_filters = []
v8_sources_filters += v8_arm_sources_filters
v8_sources_filters += v8_a64_sources_filters
v8_sources_filters += v8_ia32_sources_filters
v8_sources_filters += v8_mipsel_sources_filters
v8_sources_filters += v8_x64_sources_filters

if (cpu_arch == "x86") { v8_sources_filters -= v8_ia32_sources_filters}

if (v8_support_i18n) {
  v8_base_sources += [
    "src/src/i18n.cc",
    "src/src/i18n.h",
  ]
}
